--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(Cos214_Project)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Cos214_Project main.cpp Clock.cpp Clock.h)
+add_executable(Cos214_Project main.cpp
+        Order.h Clock.cpp Clock.h)
 add_subdirectory(GTest)
