Burger.h defined, documentation updated for Burger.h and Order.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,7 @@ project(Cos214_Project)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(Cos214_Project main.cpp
-        Order.h)
+        Order.h
+        Burger.cpp
+        Burger.h)
 add_subdirectory(GTest)
