--- a/GTest/CMakeLists.txt
+++ b/GTest/CMakeLists.txt
@@ -7,5 +7,7 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 # 'Google_Tests_run' is the target name
 # 'test1.cpp test2.cpp' are source files with tests
-add_executable(Google_Tests_run tests.cpp)
+add_executable(Google_Tests_run tests.cpp
+        ../Kitchen.cpp
+        ../Kitchen.h)
 target_link_libraries(Google_Tests_run gtest gtest_main)
