--- a/GTest/CMakeLists.txt
+++ b/GTest/CMakeLists.txt
@@ -9,5 +9,7 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 # 'test1.cpp test2.cpp' are source files with tests
 add_executable(Google_Tests_run tests.cpp
         ../Kitchen.cpp
-        ../Kitchen.h)
+        ../Kitchen.h
+        ../HeadChef.cpp
+        ../HeadChef.h)
 target_link_libraries(Google_Tests_run gtest gtest_main)
