config files added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -144,3 +144,80 @@ build/lib/libgmock_main.a
 build/lib/libgmock.a
 build/lib/libgtest_main.a
 build/lib/libgtest.a
+build/compile_commands.json
+build/Cos214_Project
+build/Makefile
+build/.cmake/api/v1/reply/cmakeFiles-v1-a687e12aa6506f7ec885.json
+build/.cmake/api/v1/reply/cmakeFiles-v1-f597ea94048d70fa6205.json
+build/.cmake/api/v1/reply/codemodel-v2-205ec50e44d558c72a26.json
+build/.cmake/api/v1/reply/codemodel-v2-e8b1cfba9c65f7bc7f63.json
+build/.cmake/api/v1/reply/index-2023-10-30T20-44-29-0910.json
+build/.cmake/api/v1/reply/index-2023-10-31T10-31-58-0335.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-919ad17522e9b14e3af5.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-c843ba390513c2acae66.json
+build/.cmake/api/v1/reply/target-gmock_main-Debug-08f1d2a67fcfb3e2fe00.json
+build/.cmake/api/v1/reply/target-gmock_main-Debug-b59e9f35d6d99c7bc616.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-44cfe98f2cb708a0e999.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-393986096d5c19b60eb9.json
+build/CMakeFiles/Makefile.cmake
+build/CMakeFiles/Makefile2
+build/CMakeFiles/progress.marks
+build/CMakeFiles/Cos214_Project.dir/build.make
+build/CMakeFiles/Cos214_Project.dir/Clock.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Clock.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/cmake_clean.cmake
+build/CMakeFiles/Cos214_Project.dir/compiler_depend.internal
+build/CMakeFiles/Cos214_Project.dir/compiler_depend.make
+build/CMakeFiles/Cos214_Project.dir/DependInfo.cmake
+build/CMakeFiles/Cos214_Project.dir/link.txt
+build/CMakeFiles/Cos214_Project.dir/main.cpp.o
+build/CMakeFiles/Cos214_Project.dir/progress.make
+build/GTest/Google_Tests_run
+build/GTest/Makefile
+build/GTest/CMakeFiles/progress.marks
+build/GTest/CMakeFiles/Google_Tests_run.dir/build.make
+build/GTest/CMakeFiles/Google_Tests_run.dir/cmake_clean.cmake
+build/GTest/CMakeFiles/Google_Tests_run.dir/DependInfo.cmake
+build/GTest/CMakeFiles/Google_Tests_run.dir/link.txt
+build/GTest/CMakeFiles/Google_Tests_run.dir/progress.make
+build/GTest/CMakeFiles/Google_Tests_run.dir/tests.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/tests.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Clock.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Clock.cpp.o.d
+build/GTest/lib/googlemock/CMakeFiles/gmock.dir/progress.make
+build/GTest/lib/googlemock/CMakeFiles/gmock_main.dir/progress.make
+build/GTest/lib/googletest/CMakeFiles/gtest.dir/progress.make
+build/GTest/lib/googletest/CMakeFiles/gtest_main.dir/progress.make
+build/compile_commands.json
+build/Cos214_Project
+build/Makefile
+build/.cmake/api/v1/reply/cmakeFiles-v1-f597ea94048d70fa6205.json
+build/.cmake/api/v1/reply/codemodel-v2-e8b1cfba9c65f7bc7f63.json
+build/.cmake/api/v1/reply/index-2023-10-30T20-44-29-0910.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-919ad17522e9b14e3af5.json
+build/.cmake/api/v1/reply/target-gmock_main-Debug-08f1d2a67fcfb3e2fe00.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-44cfe98f2cb708a0e999.json
+build/CMakeFiles/Makefile.cmake
+build/CMakeFiles/Makefile2
+build/CMakeFiles/progress.marks
+build/CMakeFiles/Cos214_Project.dir/build.make
+build/CMakeFiles/Cos214_Project.dir/cmake_clean.cmake
+build/CMakeFiles/Cos214_Project.dir/compiler_depend.make
+build/CMakeFiles/Cos214_Project.dir/DependInfo.cmake
+build/CMakeFiles/Cos214_Project.dir/link.txt
+build/CMakeFiles/Cos214_Project.dir/main.cpp.o
+build/CMakeFiles/Cos214_Project.dir/progress.make
+build/GTest/Google_Tests_run
+build/GTest/Makefile
+build/GTest/CMakeFiles/progress.marks
+build/GTest/CMakeFiles/Google_Tests_run.dir/build.make
+build/GTest/CMakeFiles/Google_Tests_run.dir/cmake_clean.cmake
+build/GTest/CMakeFiles/Google_Tests_run.dir/DependInfo.cmake
+build/GTest/CMakeFiles/Google_Tests_run.dir/link.txt
+build/GTest/CMakeFiles/Google_Tests_run.dir/progress.make
+build/GTest/CMakeFiles/Google_Tests_run.dir/tests.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/tests.cpp.o.d
+build/GTest/lib/googlemock/CMakeFiles/gmock.dir/progress.make
+build/GTest/lib/googlemock/CMakeFiles/gmock_main.dir/progress.make
+build/GTest/lib/googletest/CMakeFiles/gtest.dir/progress.make
+build/GTest/lib/googletest/CMakeFiles/gtest_main.dir/progress.make
