gtest for floor_subsystem_bill fixed

--- a/.gitignore
+++ b/.gitignore
@@ -305,6 +305,23 @@ GTest/build/lib/googletest/generated/gtest_main.pc
 GTest/build/lib/googletest/generated/gtest.pc
 GTest/build/lib/googletest/generated/GTestConfig.cmake
 GTest/build/lib/googletest/generated/GTestConfigVersion.cmake
+build/Cos214_Project
+build/.cmake/api/v1/reply/cache-v2-3d3fa2451bceb9a973be.json
+build/.cmake/api/v1/reply/cmakeFiles-v1-cc3d45d8c6e579a904df.json
+build/.cmake/api/v1/reply/codemodel-v2-7f90271ca4fead08922c.json
+build/.cmake/api/v1/reply/index-2023-10-31T19-09-29-0045.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-94231c60bb7575b21085.json
+build/.cmake/api/v1/reply/target-gmock_main-Debug-902872a71fbf2b913ef2.json
+build/.cmake/api/v1/reply/target-gmock-Debug-cd60dc74ffe708d71176.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-54d1dd9765890ff1cf72.json
+build/.cmake/api/v1/reply/target-gtest_main-Debug-69af40a837f7e896470f.json
+build/.cmake/api/v1/reply/target-gtest-Debug-cb74759ba7ab7fb901f5.json
+build/.cmake/api/v1/reply/toolchains-v1-8f001b8fbe957a6b9d5a.json
+build/CMakeFiles/Cos214_Project.dir/BillComponent.cpp.o
+build/CMakeFiles/Cos214_Project.dir/BillComponent.cpp.o.d
+build/GTest/Google_Tests_run
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BillComponent.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BillComponent.cpp.o.d
 .vscode/settings.json
 build/cmake_install.cmake
 build/CMakeCache.txt
