Naming functionality added to all States

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(Cos214_Project)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Cos214_Project main.cpp)
+add_executable(Cos214_Project TableState.h TableState.cpp Free.h Free.cpp)
 add_subdirectory(GTest)
+
+
