--- a/.gitignore
+++ b/.gitignore
@@ -572,3 +572,13 @@ build/GTest/lib/googletest/CMakeFiles/gtest.dir/compiler_depend.internal
 build/GTest/lib/googletest/CMakeFiles/gtest.dir/compiler_depend.make
 build/GTest/lib/googletest/CMakeFiles/gtest_main.dir/compiler_depend.internal
 build/GTest/lib/googletest/CMakeFiles/gtest_main.dir/compiler_depend.make
+build/.cmake/api/v1/reply/codemodel-v2-b59dc7880726b560e010.json
+build/.cmake/api/v1/reply/index-2023-11-02T12-08-25-0621.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-59f6e84641a847e945ee.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-3210bb1a5b2ef4e28c47.json
+build/CMakeFiles/Cos214_Project.dir/Free.cpp.o.d
+build/CMakeFiles/Progress/1
+build/CMakeFiles/Progress/2
+build/CMakeFiles/Progress/3
+build/CMakeFiles/Progress/18
+build/CMakeFiles/Progress/19
