assignTablesToWaiters() function added

--- a/.gitignore
+++ b/.gitignore
@@ -572,3 +572,17 @@ build/GTest/lib/googletest/CMakeFiles/gtest.dir/compiler_depend.internal
 build/GTest/lib/googletest/CMakeFiles/gtest.dir/compiler_depend.make
 build/GTest/lib/googletest/CMakeFiles/gtest_main.dir/compiler_depend.internal
 build/GTest/lib/googletest/CMakeFiles/gtest_main.dir/compiler_depend.make
+build/.cmake/api/v1/reply/cmakeFiles-v1-7920676d9f055d987a7c.json
+build/.cmake/api/v1/reply/codemodel-v2-329540fa8a0ebecbced1.json
+build/.cmake/api/v1/reply/index-2023-11-02T12-19-28-0733.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-59f6e84641a847e945ee.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-3ba9ef5593af9cbb0c59.json
+build/CMakeFiles/Progress/7
+build/CMakeFiles/Progress/17
+build/CMakeFiles/Progress/18
+build/CMakeFiles/Progress/19
+build/CMakeFiles/Progress/20
+build/CMakeFiles/Progress/21
+build/CMakeFiles/Cos214_Project.dir/Free.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Free.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/TableState.cpp.o.d
