gtest errors fixed, tests running

--- a/.gitignore
+++ b/.gitignore
@@ -596,3 +596,45 @@ build/CMakeFiles/Progress/21
 build/CMakeFiles/Cos214_Project.dir/Free.cpp.o.d
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/Free.cpp.o.d
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/TableState.cpp.o.d
+build/.cmake/api/v1/reply/codemodel-v2-92d981b24d9ef5d879f0.json
+build/.cmake/api/v1/reply/index-2023-11-02T17-32-44-0984.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-75af212e60819609bbbb.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-fb71bb8b16347c9b4b69.json
+build/CMakeFiles/Cos214_Project.dir/Bill.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Bill.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Busy.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Busy.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Eating.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Eating.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Free.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Occupied.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Occupied.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/TableComponent.cpp.o
+build/CMakeFiles/Cos214_Project.dir/TableComponent.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/TableComposite.cpp.o
+build/CMakeFiles/Cos214_Project.dir/TableComposite.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/TableState.cpp.o
+build/CMakeFiles/Cos214_Project.dir/TableState.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/WaitingOnFood.cpp.o
+build/CMakeFiles/Cos214_Project.dir/WaitingOnFood.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/WaitingOnWaiter.cpp.o
+build/CMakeFiles/Cos214_Project.dir/WaitingOnWaiter.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Bill.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Bill.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Busy.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Busy.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Eating.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Eating.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Free.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Occupied.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Occupied.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/TableComponent.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/TableComponent.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/TableComposite.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/TableComposite.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/TableState.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/WaitingOnFood.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/WaitingOnFood.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/WaitingOnWaiter.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/WaitingOnWaiter.cpp.o.d
+GTest/CMakeLists.txt
