--- a/GTest/CMakeLists.txt
+++ b/GTest/CMakeLists.txt
@@ -7,5 +7,9 @@ include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
 # 'Google_Tests_run' is the target name
 # 'test1.cpp test2.cpp' are source files with tests
-add_executable(Google_Tests_run tests.cpp ../SubBill.h ../SubBill.cpp ../BillComposite.h ../BillComposite.cpp ../Clock.h ../Clock.cpp ../TableState.cpp ../Free.cpp ../Free.h)
+add_executable(Google_Tests_run tests.cpp ../Clock.h ../Clock.cpp ../WaitingOnWaiter.h ../WaitingOnWaiter.cpp
+../WaitingOnFood.h ../WaitingOnFood.cpp ../Busy.h ../Busy.cpp ../Bill.h ../Bill.cpp ../TableComponent.h
+../TableComponent.cpp ../TableComposite.h ../TableComposite.cpp ../TableState.h ../TableState.cpp 
+../Occupied.h ../Occupied.cpp ../Free.cpp ../Free.h ../Eating.h ../Eating.cpp ../SubBill.h ../SubBill.cpp
+../BillComponent.h ../BillComponent.cpp ../BillComposite.h ../BillComposite.cpp)
 target_link_libraries(Google_Tests_run gtest gtest_main)
