Order functionality added

--- a/.gitignore
+++ b/.gitignore
@@ -596,3 +596,4 @@ build/CMakeFiles/Progress/21
 build/CMakeFiles/Cos214_Project.dir/Free.cpp.o.d
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/Free.cpp.o.d
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/TableState.cpp.o.d
+build/.cmake/api/v1/reply/index-2023-11-02T15-54-43-0104.json
