--- a/.gitignore
+++ b/.gitignore
@@ -639,3 +639,15 @@ build/GTest/CMakeFiles/Google_Tests_run.dir/__/WaitingOnWaiter.cpp.o
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/WaitingOnWaiter.cpp.o.d
 GTest/CMakeLists.txt
 build/.cmake/api/v1/reply/index-2023-11-02T15-54-43-0104.json
+build/.cmake/api/v1/reply/codemodel-v2-8321058ab6bd57099f8e.json
+build/.cmake/api/v1/reply/index-2023-11-02T20-43-32-0763.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-71d2c5906a7a96786abb.json
+build/CMakeFiles/Progress/6
+build/CMakeFiles/Progress/33
+build/CMakeFiles/Progress/34
+build/CMakeFiles/Progress/35
+build/CMakeFiles/Progress/36
+build/CMakeFiles/Progress/37
+build/CMakeFiles/Progress/38
+build/CMakeFiles/Progress/39
+build/CMakeFiles/Progress/40
