--- a/GTest/CMakeLists.txt
+++ b/GTest/CMakeLists.txt
@@ -20,11 +20,5 @@ add_executable(Google_Tests_run tests.cpp
         ../Clock.cpp
         ../Clock.h
         ../BakerChef.cpp
-        ../BakerChef.h
-        ../GarnishChef.cpp
-        ../GarnishChef.h
-        ../ButcherChef.cpp
-        ../ButcherChef.h
-        ../SauceChef.cpp
-        ../SauceChef.h)
+        ../BakerChef.h)
 target_link_libraries(Google_Tests_run gtest gtest_main)
