Test implemented for BurgerBuns. CmakeLists fixed for testing but check if issues occur ob your side. Should be fine though

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_executable(Cos214_Project main.cpp
         ButcherChef.cpp
         ButcherChef.h
         SauceChef.cpp
-        SauceChef.h)
+        SauceChef.h
         BakerChef.h
         BurgerBuns.cpp
         BurgerBuns.h
