--- a/GTest/CMakeLists.txt
+++ b/GTest/CMakeLists.txt
@@ -20,5 +20,13 @@ add_executable(Google_Tests_run tests.cpp
         ../Clock.cpp
         ../Clock.h
         ../BakerChef.cpp
-        ../BakerChef.h)
+        ../BakerChef.h
+        ../BurgerBuns.cpp
+        ../BurgerBuns.h
+        ../ButcherChef.cpp
+        ../BurgerBuns.h
+        ../SauceChef.cpp
+        ../SauceChef.h
+        ../GarnishChef.cpp
+        ../GarnishChef.h)
 target_link_libraries(Google_Tests_run gtest gtest_main)
