Ketchup implemented and test success. Adding rest of ingredients

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,5 +29,7 @@ add_executable(Cos214_Project main.cpp
         BurgerBuns.h
         BurgerIngredient.cpp
         BurgerIngredient.h
-        BurgerIngredient.h)
+        BurgerIngredient.h
+        Ketchup.cpp
+        Ketchup.h)
 add_subdirectory(GTest)
