added some build files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -651,3 +651,68 @@ build/CMakeFiles/Progress/37
 build/CMakeFiles/Progress/38
 build/CMakeFiles/Progress/39
 build/CMakeFiles/Progress/40
+build/.cmake/api/v1/reply/codemodel-v2-0d0b29bfd57b3b5924fa.json
+build/.cmake/api/v1/reply/index-2023-11-03T10-01-54-0600.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-b84c4736c25cebd8f17a.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-291d6af25c846ca8abd1.json
+build/CMakeFiles/Cos214_Project.dir/CommandLog.cpp.o
+build/CMakeFiles/Cos214_Project.dir/CommandLog.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/CommandLogIterator.cpp.o
+build/CMakeFiles/Cos214_Project.dir/CommandLogIterator.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Commands.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Commands.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Customer.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Customer.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/FloorController.cpp.o
+build/CMakeFiles/Cos214_Project.dir/FloorController.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/IOInterface.cpp.o
+build/CMakeFiles/Cos214_Project.dir/IOInterface.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Load.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Load.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Logs.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Logs.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/MaitreD.cpp.o
+build/CMakeFiles/Cos214_Project.dir/MaitreD.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Observer.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Observer.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Save.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Save.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/SavedLog.cpp.o
+build/CMakeFiles/Cos214_Project.dir/SavedLog.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Update.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Update.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/UserCommand.cpp.o
+build/CMakeFiles/Cos214_Project.dir/UserCommand.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Waiter.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Waiter.cpp.o.d
+build/GTest/toets.dat
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/CommandLog.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/CommandLog.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/CommandLogIterator.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/CommandLogIterator.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Commands.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Commands.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Customer.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Customer.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/FloorController.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/FloorController.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/IOInterface.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/IOInterface.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Load.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Load.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Logs.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Logs.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/MaitreD.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/MaitreD.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Observer.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Observer.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Save.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Save.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/SavedLog.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/SavedLog.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Update.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Update.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/UserCommand.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/UserCommand.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Waiter.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Waiter.cpp.o.d
