Implemented getTableState, getPayment modified

--- a/.gitignore
+++ b/.gitignore
@@ -651,3 +651,4 @@ build/CMakeFiles/Progress/37
 build/CMakeFiles/Progress/38
 build/CMakeFiles/Progress/39
 build/CMakeFiles/Progress/40
+build/.cmake/api/v1/reply/index-2023-11-03T09-38-47-0019.json
