fixed memory leaks attempt1

--- a/.gitignore
+++ b/.gitignore
@@ -716,3 +716,23 @@ build/GTest/CMakeFiles/Google_Tests_run.dir/__/UserCommand.cpp.o
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/UserCommand.cpp.o.d
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/Waiter.cpp.o
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/Waiter.cpp.o.d
+toets.dat
+build/CMakeFiles/Progress/22
+build/CMakeFiles/Progress/23
+build/CMakeFiles/Progress/24
+build/CMakeFiles/Progress/25
+build/CMakeFiles/Progress/26
+build/CMakeFiles/Progress/27
+build/CMakeFiles/Progress/28
+build/CMakeFiles/Progress/29
+build/CMakeFiles/Progress/30
+build/CMakeFiles/Progress/31
+build/CMakeFiles/Progress/32
+build/CMakeFiles/Progress/65
+build/CMakeFiles/Progress/66
+build/CMakeFiles/Progress/67
+build/CMakeFiles/Progress/68
+build/CMakeFiles/Progress/69
+build/CMakeFiles/Progress/70
+build/CMakeFiles/Progress/71
+build/CMakeFiles/Progress/72
