floor unit tests

--- a/.gitignore
+++ b/.gitignore
@@ -736,3 +736,54 @@ build/CMakeFiles/Progress/69
 build/CMakeFiles/Progress/70
 build/CMakeFiles/Progress/71
 build/CMakeFiles/Progress/72
+build/.cmake/api/v1/reply/cache-v2-1a1feb0f122d8a1ba42e.json
+build/.cmake/api/v1/reply/codemodel-v2-db13226dc83b65610a3f.json
+build/.cmake/api/v1/reply/index-2023-11-05T12-33-47-0924.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-c9f5768b7013dce4939a.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-131c4ca9e0ab21d300c9.json
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BakerChef.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BakerChef.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BeefPatty.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BeefPatty.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Burger.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Burger.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BurgerBuns.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BurgerBuns.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BurgerIngredient.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/BurgerIngredient.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/ButcherChef.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/ButcherChef.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Chef.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Chef.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/ChickenPatty.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/ChickenPatty.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/GarnishChef.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/GarnishChef.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/HeadChef.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/HeadChef.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/IOInterfaceTUI.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/IOInterfaceTUI.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Ketchup.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Ketchup.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Kitchen.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Kitchen.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/KitchenController.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/KitchenController.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/KitchenSubject.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/KitchenSubject.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Lettuce.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Lettuce.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Mayo.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Mayo.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Mustard.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Mustard.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Patty.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Patty.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Pickles.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Pickles.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/SauceChef.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/SauceChef.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Tomato.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/Tomato.cpp.o.d
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/VeganPatty.cpp.o
+build/GTest/CMakeFiles/Google_Tests_run.dir/__/VeganPatty.cpp.o.d
