customer groups added

--- a/.gitignore
+++ b/.gitignore
@@ -787,3 +787,56 @@ build/GTest/CMakeFiles/Google_Tests_run.dir/__/Tomato.cpp.o
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/Tomato.cpp.o.d
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/VeganPatty.cpp.o
 build/GTest/CMakeFiles/Google_Tests_run.dir/__/VeganPatty.cpp.o.d
+.vscode/settings.json
+.vscode/tasks.json
+build/.cmake/api/v1/reply/cache-v2-43ce226be6d2b6c661a2.json
+build/.cmake/api/v1/reply/index-2023-11-05T21-44-35-0532.json
+build/.cmake/api/v1/reply/toolchains-v1-84b2ef94bf9cf8bc1992.json
+build/CMakeFiles/Cos214_Project.dir/BakerChef.cpp.o
+build/CMakeFiles/Cos214_Project.dir/BakerChef.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/BeefPatty.cpp.o
+build/CMakeFiles/Cos214_Project.dir/BeefPatty.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Burger.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Burger.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/BurgerBuns.cpp.o
+build/CMakeFiles/Cos214_Project.dir/BurgerBuns.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/BurgerIngredient.cpp.o
+build/CMakeFiles/Cos214_Project.dir/BurgerIngredient.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/ButcherChef.cpp.o
+build/CMakeFiles/Cos214_Project.dir/ButcherChef.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Chef.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Chef.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/ChickenPatty.cpp.o
+build/CMakeFiles/Cos214_Project.dir/ChickenPatty.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/GarnishChef.cpp.o
+build/CMakeFiles/Cos214_Project.dir/GarnishChef.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/HeadChef.cpp.o
+build/CMakeFiles/Cos214_Project.dir/HeadChef.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/IOInterfaceGUI.cpp.o
+build/CMakeFiles/Cos214_Project.dir/IOInterfaceGUI.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/IOInterfaceTUI.cpp.o
+build/CMakeFiles/Cos214_Project.dir/IOInterfaceTUI.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Ketchup.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Ketchup.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Kitchen.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Kitchen.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/KitchenController.cpp.o
+build/CMakeFiles/Cos214_Project.dir/KitchenController.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/KitchenSubject.cpp.o
+build/CMakeFiles/Cos214_Project.dir/KitchenSubject.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Lettuce.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Lettuce.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Mayo.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Mayo.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Mustard.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Mustard.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Patty.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Patty.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Pickles.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Pickles.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/SauceChef.cpp.o
+build/CMakeFiles/Cos214_Project.dir/SauceChef.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/Tomato.cpp.o
+build/CMakeFiles/Cos214_Project.dir/Tomato.cpp.o.d
+build/CMakeFiles/Cos214_Project.dir/VeganPatty.cpp.o
+build/CMakeFiles/Cos214_Project.dir/VeganPatty.cpp.o.d
