--- a/.gitignore
+++ b/.gitignore
@@ -840,3 +840,59 @@ build/CMakeFiles/Cos214_Project.dir/Tomato.cpp.o
 build/CMakeFiles/Cos214_Project.dir/Tomato.cpp.o.d
 build/CMakeFiles/Cos214_Project.dir/VeganPatty.cpp.o
 build/CMakeFiles/Cos214_Project.dir/VeganPatty.cpp.o.d
+build/.cmake/api/v1/reply/cache-v2-c5ecbff28dcb4d93e818.json
+build/.cmake/api/v1/reply/codemodel-v2-34e05aefa119dd178ecd.json
+build/.cmake/api/v1/reply/index-2023-11-06T07-39-52-0202.json
+build/.cmake/api/v1/reply/target-Cos214_Project-Debug-c0af407895648d87cdf8.json
+build/.cmake/api/v1/reply/target-gmock_main-Debug-bf6f9717d29ceb2adc5e.json
+build/.cmake/api/v1/reply/target-gmock-Debug-a1c1fb2d5003af09816f.json
+build/.cmake/api/v1/reply/target-Google_Tests_run-Debug-9bef9f0cdd705b53c2ad.json
+build/.cmake/api/v1/reply/target-gtest_main-Debug-534dde13a08c60cc808d.json
+build/.cmake/api/v1/reply/target-gtest-Debug-195b2a60be86c939235d.json
+build/.cmake/api/v1/reply/toolchains-v1-9286d5546ae62119829c.json
+build/CMakeFiles/Progress/47
+build/CMakeFiles/Progress/48
+build/CMakeFiles/Progress/49
+build/CMakeFiles/Progress/50
+build/CMakeFiles/Progress/51
+build/CMakeFiles/Progress/52
+build/CMakeFiles/Progress/53
+build/CMakeFiles/Progress/54
+build/CMakeFiles/Progress/55
+build/CMakeFiles/Progress/56
+build/CMakeFiles/Progress/57
+build/CMakeFiles/Progress/58
+build/CMakeFiles/Progress/59
+build/CMakeFiles/Progress/60
+build/CMakeFiles/Progress/61
+build/CMakeFiles/Progress/62
+build/CMakeFiles/Progress/63
+build/CMakeFiles/Progress/64
+build/CMakeFiles/Progress/73
+build/CMakeFiles/Progress/74
+build/CMakeFiles/Progress/75
+build/CMakeFiles/Progress/76
+build/CMakeFiles/Progress/77
+build/CMakeFiles/Progress/78
+build/CMakeFiles/Progress/79
+build/CMakeFiles/Progress/80
+build/CMakeFiles/Progress/81
+build/CMakeFiles/Progress/82
+build/CMakeFiles/Progress/83
+build/CMakeFiles/Progress/84
+build/CMakeFiles/Progress/85
+build/CMakeFiles/Progress/86
+build/CMakeFiles/Progress/87
+build/CMakeFiles/Progress/88
+build/CMakeFiles/Progress/89
+build/CMakeFiles/Progress/90
+build/CMakeFiles/Progress/91
+build/CMakeFiles/Progress/92
+build/CMakeFiles/Progress/93
+build/CMakeFiles/Progress/94
+build/CMakeFiles/Progress/95
+build/CMakeFiles/Progress/96
+build/CMakeFiles/Progress/97
+build/CMakeFiles/Progress/98
+build/CMakeFiles/Progress/99
+build/CMakeFiles/Progress/100
